--- a/style.css
+++ b/style.css
@@ -172,22 +172,28 @@ footer {
     .hero-text {
         font-size:1.5em;
     }
-    .hero-nav {
+    .hero-nav > ul > li{
         display:flex;
         justify-content:center;
         align-items:center;
+        font-size:1em;
+        margin:2px;
+
+        
+        
+        
     }
 
     .card {
-
+        width:100%;
        display:flex;
        justify-content: center;
        align-items: center;
-        margin-top:2.5em;
-        margin-left:7.5em;
-        margin-right:7.5em;
-        margin-bottom:2.5em;
-        padding: 0.5em 1em 0.5em 1em;
+        margin-top:0.5em;
+        margin-left:0;
+        margin-right:0;
+        margin-bottom:0.5em;
+        padding:0.5em;
         border:none;
         
         color:black;
@@ -220,6 +226,9 @@ footer {
         flex-direction:column;
         justify-content:center;
         align-items:center;
+        padding:0;
+        margin:0;
+        
     }
     .card-3:hover {
         background:none;
