--- a/style.css
+++ b/style.css
@@ -168,6 +168,11 @@ footer {
 
   @media only screen and (max-width:1268px) {
 
+   
+
+    p {
+        font-size:0.7em;
+    }
 
     .hero-text {
         font-size:1.5em;
@@ -176,7 +181,7 @@ footer {
         display:flex;
         justify-content:center;
         align-items:center;
-        font-size:1em;
+        font-size:1.2em;
         margin:2px;
 
         
